--- a/modules/mdDaoTao/fwCandidate/style.css
+++ b/modules/mdDaoTao/fwCandidate/style.css
@@ -1,4 +1,43 @@
 /* ĐĂNG KÝ TƯ VẤN */
 .advisory {
   box-shadow: 0px 0px 10px rgb(0 0 0 / 20%);
+  position: relative;
+  transform: translateY(100px);
+  transition: 1s all ease;
+  opacity: 0;
+}
+.advisory.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.advisory .advisory_form_container {
+    width: 100%;
+    padding-left: 33px;
+    padding-right: 34px;
+    padding-bottom: 36px;
+    padding-top: 112px;
+}
+@media (max-width: 768px) {
+    .advisory .advisory_form_container {
+        width: 100%;
+        padding-left: 33px;
+        padding-right: 34px;
+        padding-bottom: 15px;
+        padding-top: 50px;
+    }
+}
+
+@media (max-width: 992px) {
+    .advisory{
+        padding-bottom: 30px;
+        box-shadow: none;
+    }
+}
+@media (max-width: 425px) {
+    .advisory .advisory_form_container .intro_form_title{
+        width: 100%;
+    }
+    .advisory .advisory_form_container .intro_form{
+        margin-top: 35px;
+    }
 }
