--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -1268,7 +1268,7 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
 .header.scrolled .header_content {
     background-color: #199d76;
     height: 75px;
-    box-shadow: 0px 5px 15px rgba(87, 204, 195, 0.15);
+    box-shadow: 0px 0px 10px whitesmoke;
 }
 .header.scrolled .main_nav ul li a {
     font-size: 16px;
