--- a/modules/_default/fwHome/style.css
+++ b/modules/_default/fwHome/style.css
@@ -603,6 +603,10 @@
 
 
 /* LOGIN */
+.login_form{
+    margin-top: 100px;
+    height: calc(100vh - 100px);
+}
 .login_form .intro_form_login {
     background-color: white;
     width: 100%;
