--- a/modules/_default/fwHome/style.css
+++ b/modules/_default/fwHome/style.css
@@ -151,9 +151,9 @@
 /* GIỚI THIỆU HIỆP PHÁT */
 .section-intro-hp {
     background-color: #199d76;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    height: calc(100vh - 25px);
+    padding-top: 200px;
+    /* padding-bottom: 100px; */
+    height: 100vh;
 }
 .warp_gioi_thieu_HP {
     margin: 0 50px;
@@ -604,8 +604,8 @@
 
 /* LOGIN */
 .login_form{
-    margin-top: 100px;
-    height: calc(100vh - 100px);
+    /* margin-top: 100px; */
+    height: calc(100vh);
 }
 .login_form .intro_form_login {
     background-color: white;
