--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -1029,8 +1029,10 @@ section {
 *********************************/
 
 .newsletter {
-    padding-top: 56px;
-    padding-bottom: 82px;
+    /* padding-top: 56px;
+    padding-bottom: 82px; */
+    padding-top: 30px;
+    padding-bottom: 56px;
 }
 
 .newsletter_title {
@@ -1041,7 +1043,7 @@ section {
 }
 
 .newsletter_row {
-    margin-top: 54px;
+    margin-top: 30px;
 }
 
 .newsletter_input {
