--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -159,6 +159,21 @@ h5 {
     font-size: 18px;
 }
 
+@media (max-width: 991px) {
+
+    h3{
+        font-size: 24px;
+    }
+
+    h4{
+        font-size: 20px;
+    }
+
+    h5{
+        font-size: 16px;
+    }
+}
+
 h1,
 h2,
 h3,
@@ -1359,7 +1374,7 @@ section {
 }
 
 .team_content {
-    padding-top: 37px;
+    padding: 32px 0;
 }
 
 .team_title {
